added a color in the text

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,3 +1,8 @@
-.cliff-h1{
-    color: #99ccff;
+.nigga{
+    text-align: center;
+    color: #fc99ff;
+}
+.racist{
+    text-align: center;
+    color:blue;
 }
